--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   },
   "dependencies": {
     "@slidev/cli": "^51.0.2",
-    "@slidev/theme-default": "latest",
-    "@slidev/theme-seriph": "latest",
+    "@slidev/theme-apple-basic": "^0.25.1",
     "vue": "^3.5.13"
   }
 }
